--- a/about.html
+++ b/about.html
@@ -100,8 +100,8 @@
         <div class="col-md-6">
           <div class="detail-box">
             <p>
-              As a seasoned Web Developer, I bring a wealth of experience in designing and implementing dynamic and visually compelling websites. Proficient in a variety of programming languages and frameworks, I excel at turning concepts into responsive, user-friendly interfaces. My passion for staying on the cutting edge of technology allows me to deliver innovative solutions that not only meet but exceed client expectations. </p><p>
-              With a keen eye for detail and a commitment to continuous improvement, I thrive in collaborative environments and enjoy the challenge of transforming ideas into impactful digital experiences.
+              As a seasoned Web Developer, Ansh Verma brings a wealth of experience in designing and implementing dynamic and visually compelling websites. Proficient in a variety of programming languages and frameworks, he excels at turning concepts into responsive, user-friendly interfaces. His passion for staying on the cutting edge of technology allows him to deliver innovative solutions that not only meet but exceed client expectations. </p><p>
+                With a keen eye for detail and a commitment to continuous improvement, Ansh thrives in collaborative environments and enjoys the challenge of transforming ideas into impactful digital experiences.
             </p>
             <br>Ansh Verma
             <br>Team Technovates      
@@ -142,7 +142,7 @@
         <div class="col-md-6">
           <div class="detail-box">
             <p>
-              I'm a Product Engineer and Business Analyst with 4 years of hands-on experience working with top consumer tech brands like OnePlus and OPPO. My unique strength lies in bridging the gap between hardware and software — ensuring seamless integration to enhance product performance and user experience. With a sharp eye for optimization, I specialize in identifying small yet impactful tweaks that drive significant business outcomes. Whether it's improving system workflows or aligning product features with market needs, I thrive at the intersection of engineering precision and business strategy
+              A Product Engineer and Business Analyst with 4 years of hands-on experience working with top consumer tech brands like OnePlus and OPPO. His unique strength lies in bridging the gap between hardware and software — ensuring seamless integration to enhance product performance and user experience. With a sharp eye for optimization, he specialize in identifying small yet impactful tweaks that drive significant business outcomes. Whether it's improving system workflows or aligning product features with market needs, he thrive at the intersection of engineering precision and business strategy
             </p>
             <br>Prajwal
             <br>Team Technovates
