--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
             <p>
               A Product Engineer and Business Analyst with 4 years of hands-on experience working with top consumer tech brands like OnePlus and OPPO. His unique strength lies in bridging the gap between hardware and software — ensuring seamless integration to enhance product performance and user experience. With a sharp eye for optimization, he specialize in identifying small yet impactful tweaks that drive significant business outcomes. Whether it's improving system workflows or aligning product features with market needs, he thrive at the intersection of engineering precision and business strategy
             </p>
-            <br>Prajwal
+            <br>Prajjval Mishra
             <br>Team Technovates
           </div>
         </div>
