--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/Prajwal.jpg" alt="">
+            <img src="images/prajwal.jpg" alt="">
           </div>
         </div>
         <div class="col-md-6">
