--- a/about.html
+++ b/about.html
@@ -70,27 +70,11 @@
           About Us
         </h2>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="img-box">
-            <img src="images/gagansir.jpg" alt="">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <p>
-              Experienced Assistant Professor with a demonstrated history of working in the higher education industry. Skilled in Research, Robotics,Management and have Strong education professional with a Bachelor of Technology (B.Tech.) focused in Mechanical Engineering.
-            </p>
-            <br>Dr. Gagan Bansal
-            <br>Mentor Technovates      
-            <br>PhD ME IIT(BHU)      
-          </div>
-        </div>
+      <div class="heading_container">
+        <h3>
+          TEAM TECHNOVATES
+        </h3>
       </div>
-    </div>
-  </section>
-  <section class="about_section layout_padding ">
-    <div class="container">
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
@@ -136,7 +120,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/prajwal.jpg" alt="">
+            <img src="images/Prajwal.jpg" alt="">
           </div>
         </div>
         <div class="col-md-6">
@@ -144,7 +128,7 @@
             <p>
               A Product Engineer and Business Analyst with 4 years of hands-on experience working with top consumer tech brands like OnePlus and OPPO. His unique strength lies in bridging the gap between hardware and software — ensuring seamless integration to enhance product performance and user experience. With a sharp eye for optimization, he specialize in identifying small yet impactful tweaks that drive significant business outcomes. Whether it's improving system workflows or aligning product features with market needs, he thrive at the intersection of engineering precision and business strategy
             </p>
-            <br>Prajjval Mishra
+            <br>Prajwal
             <br>Team Technovates
           </div>
         </div>
@@ -152,6 +136,33 @@
       </div>
     </div>
   </section>
+  <section class="about_section layout_padding ">
+    <div class="container">
+      <div class="heading_container">
+        <h3>
+          MENTOR (Team Technovates)
+        </h3>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="images/gagansir.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="detail-box">
+            <p>
+              Experienced Assistant Professor with a demonstrated history of working in the higher education industry. Skilled in Research, Robotics,Management and have Strong education professional with a Bachelor of Technology (B.Tech.) focused in Mechanical Engineering.
+            </p>
+            <br>Dr. Gagan Bansal
+            <br>Mentor Technovates      
+            <br>PhD ME IIT(BHU)      
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
 
 
   <!-- end about section -->
